tests/ui/error-codes/E0658.rs
use std::intrinsics; //~ ERROR E0658

fn main() {}
